[package]
name = "oris-mania-utils"
version = "0.1.4"
description = "ori's mania utils - skill ratings overlay for osu!mania"
authors = ["ori's mania utils"]
edition = "2021"

[lib]
name = "oris_mania_utils_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
rfd = "0.15"
minacalc-rs = "515.1.1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
rdev = "0.5.3"
lazy_static = "1.5.0"

[profile.release.package.minacalc-sys]
opt-level = 1
